--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.10"
 	modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
+	include modApi("teamreborn:energy:3.0.0")
 	implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.1'
 	implementation project(":common")
 	implementation "com.google.auto.service:auto-service:1.1.1"
